# sms_boom_r

./: Cargo.toml  LICENSE  README.md  api.json
.github/workflows/: rust.yml
frontend/: .editorConfig  .env  README.md  index.html  package.json  pnpm-lock.yaml
frontend/presets/: index.ts
frontend/presets/types/: vite.d.ts
frontend/src/: App.vue
frontend/src/api/: api.ts
frontend/src/components/: HelloWorld.vue  Navigation.vue
frontend/src/composables/: http.ts
frontend/src/layouts/: default.vue
frontend/src/pages/: index.vue
frontend/src/plugins/: router.ts
frontend/src/styles/: main.css
src/: main.rs  route_fun.rs  send_rq.rs  struct_mod.rs  write_to_file.rs
