[package]
name = "sms_boom_r"
version = "0.1.0"
edition = "2021"
description = "A tool to send SMS to a phone number"
authors = ["ottocsb "]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.23", features = ["json"] }
tokio = { version = "1.35.0", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
time = "0.3.30"
num = "0.4.1"
indicatif = "0.17.7"
regex = { version = "1.10.2", features = [] }
